[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "liquid-lens-calibration"
version = "0.1.0"
description = "Build a z -> diopter lookup table for an Optotune liquid lens using a multi-camera Basler rig"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Elhanan Buchsbaum", email = "ebuchsbaum@protonmail.com" },
]
maintainers = [
    { name = "Elhanan Buchsbaum", email = "ebuchsbaum@protonmail.com" },
]
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "opencv-contrib-python",
    "pypylon",
    "ximea-py",
    "optotune-lens",
]

[project.scripts]
lens-calibrate = "liquid_lens_calibration.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv.sources]
optotune-lens = { path = "/home/nfc/src/optotune-lens" }
